nav & header part

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <a href="#">home</a>
                         </li>
                         <li>
-                            <a href="#">color change</a>
+                            <a href="#">color change <span><i class="fa-solid fa-chevron-down"></i></span> </a>
                         </li>
                         <li>
                             <a href="#">blog</a>
@@ -37,7 +37,7 @@
                             <a href="#">contact</a>
                         </li>
                         <li class="dropdown_main">
-                            <a href="#">pages</a>
+                            <a href="#">pages <span><i class="fa-solid fa-chevron-down"></i></span> </a>
                             <ul class="dropdown">
                                 <li><a href="#">blog</a></li>
                                 <li><a href="#">blog</a></li>
@@ -58,11 +58,30 @@
                 </div>
                 <div class="nav__wrapper_content_2">
                     <ul>
-                        <li>wfef</li>
-                        <li>wfef</li>
-                        <li>wfef</li>
-                        <li>wfef</li>
-                        <li>wfef</li>
+                        <li class="dropdown_main">
+                            <a href="#">english <span><i class="fa-solid fa-chevron-down"></i></span></a>
+                            <ul class="dropdown">
+                                <li><a href="#">fgfdgb</a></li>
+                                <li><a href="#">fgfdgb</a></li>
+                                <li><a href="#">fgfdgb</a></li>
+                                <li><a href="#">fgfdgb</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown_main">
+                            <a href="#">dollar (US) <span><i class="fa-solid fa-chevron-down"></i></span></a>
+                            <ul class="dropdown">
+                                <li><a href="#">fgfdgb</a></li>
+                                <li><a href="#">fgfdgb</a></li>
+                                <li><a href="#">fgfdgb</a></li>
+                                <li><a href="#">fgfdgb</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">register</a>
+                        </li>
+                        <li>
+                            <a href="#">login</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -72,10 +91,94 @@
 
 
 
-
-
-
     <!-- ------------------nav end here------------------ -->
+
+
+
+    <!-- --------------------header start here----------------- -->
+
+    <header id="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2  logo">
+                    <img class="img-fluid" src="images/logo.png" alt="img">
+                </div>
+                <div class="col-lg-7 search">
+                    <div class="header__search_wrapper">
+                        <div class="header__info">
+                            <a href="tel:"><span><i class="fa-solid fa-phone"></i></span> +8801996153133</a>
+                            <a href="mailto:"> <span><i class="fa-solid fa-envelope"></i></span> @support.gmail.com</a>
+                        </div>
+                        <div class="header__search">
+                            <input type="text" placeholder="search for item">
+                            <div>
+                                <ul >
+                                    <li class="dropdown_main">
+                                        <a href="#">all catagories <span><i class="fa-solid fa-chevron-down"></i></span></a>
+                                        <ul class="dropdown">
+                                            <li><a href="#">eeeeee</a></li>
+                                            <li><a href="#">eeeeee</a></li>
+                                            <li><a href="#">eeeeee</a></li>
+                                            <li><a href="#">eeeeee</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="btn">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-1 list">
+                    <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
+                    <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
+                </div>
+                <div class="col-lg-2 cart">
+                    <div class="cart__icon">
+                        <i class="fa-solid fa-cart-flatbed"></i>
+                        <div class="popup">3</div>
+                    </div>
+                    <div class="cart__price">
+                        <a href="#"> your cart:
+                            <br> 
+                            <span>$3778,00</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- --------------------header end here----------------- -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -94,6 +197,8 @@
 
     <!-- ---------juery js--------------- -->
     <script src="js/jquery-2.2.4.min.js"></script>
+    <!-- ----------fontawesome--------------- -->
+    <script src="https://kit.fontawesome.com/eccb807151.js" crossorigin="anonymous"></script>
     <!-- -------------bootstrap js---------- -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- ----------main js--------------- -->
