--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <div>
                                 <ul >
                                     <li class="dropdown_main">
-                                        <a href="#">all catagories <span><i class="fa-solid fa-chevron-down"></i></span></a>
+                                        <a href="#">all categories <span><i class="fa-solid fa-chevron-down"></i></span></a>
                                         <ul class="dropdown">
                                             <li><a href="#">eeeeee</a></li>
                                             <li><a href="#">eeeeee</a></li>
@@ -155,6 +155,7 @@
 
     <section id="banner">
         <div class="container">
+            <!-- --------banner menu & slider---------- -->
             <div class="row">
                 <div class="col-lg-2 banner__menu">
                     <div class="banner__menu_head">
@@ -222,6 +223,72 @@
                     </div>
                 </div>
             </div>
+            <!-- --------banner menu & slider---------- -->
+            <!-- ----------banner mobile & watch------------ -->
+            <div class="row">
+                <div class="col-lg-6 mobile">
+                    <a href="#" class="banner__mobile">
+                        <h2>new life</h2>
+                        <h4>introducing new category</h4>
+                        <img src="images/banner-narrow-01.jpg" alt="img">
+                    </a>
+                </div>
+                <div class="col-lg-6 mobile">
+                    <a href="#" class="banner__watch">
+                        <h2>time & style</h2>
+                        <h4>checkout new arrivels</h4>
+                        <img src="images/banner-narrow-02.jpg" alt="img">
+                    </a>
+                </div>
+            </div>
+            <!-- ----------banner mobile & watch------------ -->
+            <!-- -------------navs & tabs----------------- -->
+            <nav>
+                <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                  <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Home</button>
+                  <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</button>
+                  <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button>
+                </div>
+              </nav>
+              <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">...</div>
+
+
+
+                <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">...</div>
+
+
+                
+                <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
+              </div>
+              
+
+
+
+
+
+
+
+
+
+
+
+
+            <!-- -------------navs & tabs----------------- -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </div>
     </section>
 
