--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@
                                         <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
                                     </div>
                                 </div>
+                                <div class="sale__tag">
+                                    <span>sale</span>
+                                </div>
                             </div>                            
                         </div>
                         <div class="col-lg-3 sale">
@@ -549,7 +552,14 @@
                 </div>
                 <!-- ---------3rd content-------------- -->
             </div>
-              
+            <div class="more__products">
+                <div class="products">
+                    <a href="#">
+                        <span><i class="fa-solid fa-plus"></i></span>                        
+                        load more products
+                    </a>
+                </div>
+            </div>
 
 
 
