best seller part

--- a/index.html
+++ b/index.html
@@ -304,6 +304,9 @@
                                         <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
                                     </div>
                                 </div>
+                                <div class="sale__tag">
+                                    <span>new!</span>
+                                </div>
                             </div>                            
                         </div>
                         <div class="col-lg-3 sale">
@@ -350,6 +353,12 @@
                                         <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
                                     </div>
                                 </div>
+                                <div class="sale__tag">
+                                    <span>sale</span>
+                                </div>
+                                <div class="sale__tag_1">
+                                    <span>bestseller</span>
+                                </div>
                             </div>                            
                         </div>
                     </div>
@@ -379,6 +388,9 @@
                                         <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
                                     </div>
                                 </div>
+                                <div class="sale__tag">
+                                    <span>new!</span>
+                                </div>
                             </div>                            
                         </div>
                         <div class="col-lg-3 sale">
@@ -402,6 +414,9 @@
                                         <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
                                     </div>
                                 </div>
+                                <div class="sale__tag">
+                                    <span>sale</span>
+                                </div>
                             </div>                            
                         </div>                        
                         <div class="col-lg-3 sale">
@@ -424,6 +439,12 @@
                                         <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
                                         <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
                                     </div>
+                                </div>
+                                <div class="sale__tag">
+                                    <span>sale</span>
+                                </div>
+                                <div class="sale__tag_1">
+                                    <span>bestseller</span>
                                 </div>
                             </div>                            
                         </div>
@@ -455,30 +476,7 @@
                 <!-- ---------2nd content-------------- -->
                 <!-- ---------3rd content-------------- -->
                 <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-                    <div class="row">                                                
-                        <div class="col-lg-3 sale">
-                            <div class="sale__item">
-                                <img src="images/product-04.jpg" alt="img">
-                                <div class="sale__detail">
-                                    <h6>-50% sale</h6>
-                                    <h4>Netbook Acer TravelMate B113-E-10072</h4>
-                                    <h5>acer</h5>
-                                </div>
-                                <div class="sale__price">
-                                    <h2>$1399.00</h2>
-                                    <h3>$1199.00</h3>
-                                </div>
-                                <div class="sale__order">
-                                    <div>
-                                        <a href="#" class="common__btn">add to cart</a>
-                                    </div>                                    
-                                    <div class="price__compare">
-                                        <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
-                                        <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
-                                    </div>
-                                </div>
-                            </div>                            
-                        </div>
+                    <div class="row">                        
                         <div class="col-lg-3 sale">
                             <div class="sale__item">
                                 <img src="images/product-03.jpg" alt="img">
@@ -504,11 +502,11 @@
                         </div>
                         <div class="col-lg-3 sale">
                             <div class="sale__item">
-                                <img src="images/product-02.jpg" alt="img">
+                                <img src="images/product-04.jpg" alt="img">
                                 <div class="sale__detail">
                                     <h6>-50% sale</h6>
-                                    <h4>White lumia 9001</h4>
-                                    <h5>nokia</h5>
+                                    <h4>Netbook Acer TravelMate B113-E-10072</h4>
+                                    <h5>acer</h5>
                                 </div>
                                 <div class="sale__price">
                                     <h2>$1399.00</h2>
@@ -522,6 +520,12 @@
                                         <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
                                         <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
                                     </div>
+                                </div>
+                                <div class="sale__tag">
+                                    <span>sale</span>
+                                </div>
+                                <div class="sale__tag_1">
+                                    <span>bestseller</span>
                                 </div>
                             </div>                            
                         </div>
@@ -545,6 +549,35 @@
                                         <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
                                         <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
                                     </div>
+                                </div>
+                                <div class="sale__tag">
+                                    <span>sale</span>
+                                </div>
+                            </div>                            
+                        </div>
+                        <div class="col-lg-3 sale">
+                            <div class="sale__item">
+                                <img src="images/product-02.jpg" alt="img">
+                                <div class="sale__detail">
+                                    <h6>-50% sale</h6>
+                                    <h4>White lumia 9001</h4>
+                                    <h5>nokia</h5>
+                                </div>
+                                <div class="sale__price">
+                                    <h2>$1399.00</h2>
+                                    <h3>$1199.00</h3>
+                                </div>
+                                <div class="sale__order">
+                                    <div>
+                                        <a href="#" class="common__btn">add to cart</a>
+                                    </div>                                    
+                                    <div class="price__compare">
+                                        <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
+                                        <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
+                                    </div>
+                                </div>
+                                <div class="sale__tag">
+                                    <span>new!</span>
                                 </div>
                             </div>                            
                         </div>
@@ -590,24 +623,180 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- ------------------------banner end here------------ -->
 
 
+    <!-- ---------------------best seller start here--------- -->
 
+    <section id="seller">
+        <div class="container">
+            <div class="seller__heading " data-aos="fade-up" data-aos-delay="50" >
+                Best Sellers
+            </div>
+            <div class="seller__wrapper" data-aos="fade-up" data-aos-delay="150">
+                <div class="seller__small_content">
+                    <div class="small__content_wrapper">
+                        <div class="small__content">
+                            <img src="images/small_product-1.jpg" alt="img">
+                            <div class="small__content_detail">
+                                <h2> beats studio headphones official one</h2>
+                                <p>beats</p>
+                            </div>
+                            <div class="small__content_price">
+                                $1199.00
+                            </div>
+                            <div class="small__content_order">
+                                <div>
+                                    <a class="common__btn" href="#">add to cart</a>
+                                </div>
+                                <div class="small__price_compare">
+                                    <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
+                                    <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="small__content">
+                            <img src="images/small_product-2.jpg" alt="img">
+                            <div class="small__content_detail">
+                                <h2> playstasion 4 with four games and pad</h2>
+                                <p>acer</p>
+                            </div>
+                            <div class="small__content_price">
+                                $1199.00
+                            </div>
+                            <div class="small__content_order">
+                                <div>
+                                    <a class="common__btn" href="#">add to cart</a>
+                                </div>
+                                <div class="small__price_compare">
+                                    <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
+                                    <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="small__content">
+                            <img src="images/small_product-3.jpg" alt="img">
+                            <div class="small__content_detail">
+                                <h2> EOS rebel t5i DSLR Camera with 18-55mm IS STM lens</h2>
+                                <p>canon</p>
+                            </div>
+                            <div class="small__content_price">
+                                $1199.00
+                            </div>
+                            <div class="small__content_order">
+                                <div>
+                                    <a class="common__btn" href="#">add to cart</a>
+                                </div>
+                                <div class="small__price_compare">
+                                    <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
+                                    <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="small__content">
+                            <img src="images/small_product-4.jpg" alt="img">
+                            <div class="small__content_detail">
+                                <h2>fitbit zip wireless activity tracker - lime</h2>
+                                <p>fitbit zip</p>
+                            </div>
+                            <div class="small__content_price">
+                                $1199.00
+                            </div>
+                            <div class="small__content_order">
+                                <div>
+                                    <a class="common__btn" href="#">add to cart</a>
+                                </div>
+                                <div class="small__price_compare">
+                                    <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
+                                    <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="small__content">
+                            <img src="images/small_product-5.jpg" alt="img">
+                            <div class="small__content_detail">
+                                <h2>PowerShot elph 115 16MP digital camera</h2>
+                                <p>canon</p>
+                            </div>
+                            <div class="small__content_price">
+                                $1199.00
+                            </div>
+                            <div class="small__content_order">
+                                <div>
+                                    <a class="common__btn" href="#">add to cart</a>
+                                </div>
+                                <div class="small__price_compare">
+                                    <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
+                                    <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="small__content">
+                            <img src="images/small_product-6.jpg" alt="img">
+                            <div class="small__content_detail">
+                                <h2> netbook acer travelMate b113-E-10072</h2>
+                                <p>acer</p>
+                            </div>
+                            <div class="small__content_price">
+                                $1199.00
+                            </div>
+                            <div class="small__content_order">
+                                <div>
+                                    <a class="common__btn" href="#">add to cart</a>
+                                </div>
+                                <div class="small__price_compare">
+                                    <a href="#"><span><i class="fa-solid fa-heart"></i></span> wishlist (24)</a>
+                                    <a href="#"><span><i class="fa-solid fa-arrow-right-arrow-left"></i></span> compare (4)</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="seller__big_content">
+                    <div class="big__content_img_main">
+                        <div class="big__slider">
+                            <div class="big__content_img">
+                                <img src="images/big_product-1.jpg" alt="img">
+                            </div>
+                            <div class="big__content_img">
+                                <img src="images/big_product-1.jpg" alt="img">
+                            </div>
+                            <div class="big__content_img">
+                                <img src="images/big_product-1.jpg" alt="img">
+                            </div>                            
+                        </div>
+                        <div class="big__img_detail">
+                            <a href="#">
+                                <h2>CPU intel core i5-4670k 3.4GHz BOX <br> B82-12-122-41</h2>
+                            </a>                            
+                            <p>sony</p>
+                        </div>
+                        <div class="big__img_price">
+                            <p>$1199.00</p>
+                            <a href="#" class="common__btn">add to cart</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- ---------------------best seller end here--------- -->
 
 
 
