--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/slick.css">
     <!-- ------------fade up css----------------- -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- --------------------font aewsome---------------- -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/fontawesome.min.css">
     <!-- -------------bootstrap css---------->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- --------main css---------------- -->
@@ -781,25 +783,64 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- ---------------------best seller end here--------- -->
 
 
+    <!-- -------------------recently part start here--------------- -->
 
+    <section id="recent">
+        <div class="container">
+            <div class="recent__heading">
+                <h2>Recently Viewed</h2>
+            </div>
+            <div class="recent__wrapper">
+                <div class="recent__content_slider">
+                    <div class="recent__content_main">
+                        <img src="images/recent-1.jpg" alt="img">
+                        <div class="recent__content_detail">
+                            <a href="#">
+                                LC-70UD1U 70" class aquos 4K ultra HD
+                            </a>
+                            <p>sharp</p>
+                        </div>
+                        <div class="recent__content_price">
+                            $1199.00
+                        </div>
+                    </div>
+
+
+
+
+
+
+                    <div class="recent__content_main">2</div>
+                    <div class="recent__content_main">3</div>
+                    <div class="recent__content_main">4</div>
+                    <div class="recent__content_main">5</div>
+                    <div class="recent__content_main">6</div>
+                    <div class="recent__content_main">7</div>
+                    <div class="recent__content_main">8</div>
+                    <div class="recent__content_main">9</div>
+                    <div class="recent__content_main">10</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- -------------------recently part end here--------------- -->
 
 
 
