--- a/index.html
+++ b/index.html
@@ -790,10 +790,10 @@
 
     <section id="recent">
         <div class="container">
-            <div class="recent__heading">
+            <div class="recent__heading" data-aos="fade-up" data-aos-delay="50">
                 <h2>Recently Viewed</h2>
             </div>
-            <div class="recent__wrapper">
+            <div class="recent__wrapper" data-aos="fade-up" data-aos-delay="150">
                 <div class="recent__content_slider">
                     <div class="recent__content_main">
                         <img src="images/recent-1.jpg" alt="img">
@@ -807,26 +807,184 @@
                             $1199.00
                         </div>
                     </div>
-
-
-
-
-
-
-                    <div class="recent__content_main">2</div>
-                    <div class="recent__content_main">3</div>
-                    <div class="recent__content_main">4</div>
-                    <div class="recent__content_main">5</div>
-                    <div class="recent__content_main">6</div>
-                    <div class="recent__content_main">7</div>
-                    <div class="recent__content_main">8</div>
-                    <div class="recent__content_main">9</div>
-                    <div class="recent__content_main">10</div>
+                    <div class="recent__content_main">
+                        <img src="images/recent-2.jpg" alt="img">
+                        <div class="recent__content_detail">
+                            <a href="#">
+                                cinemizer OLED 3D virtual reality TV Video
+                            </a>
+                            <p>zeiss</p>
+                        </div>
+                        <div class="recent__content_price">
+                            $1199.00
+                        </div>
+                    </div>
+                    <div class="recent__content_main">
+                        <img src="images/recent-3.jpg" alt="img">
+                        <div class="recent__content_detail">
+                            <a href="#">
+                                s2340T23" full HD multi-Touch Monitor
+                            </a>
+                            <p>dell</p>
+                        </div>
+                        <div class="recent__content_price">
+                            $1199.00
+                        </div>
+                    </div>
+                    <div class="recent__content_main">
+                        <img src="images/recent-4.jpg" alt="img">
+                        <div class="recent__content_detail">
+                            <a href="#">
+                                kardon BDS 7772/120 integrated 3D
+                            </a>
+                            <p>harman</p>
+                        </div>
+                        <div class="recent__content_price">
+                            $1199.00
+                        </div>
+                    </div>
+                    <div class="recent__content_main">
+                        <img src="images/recent-5.jpg" alt="img">
+                        <div class="recent__content_detail">
+                            <a href="#">
+                                netbook acer travel B113-E-10072
+                            </a>
+                            <p>acer</p>
+                        </div>
+                        <div class="recent__content_price">
+                            $1199.00
+                        </div>
+                    </div>
+                    <div class="recent__content_main">
+                        <img src="images/recent-6.jpg" alt="img">
+                        <div class="recent__content_detail">
+                            <a href="#">
+                                iPod touch 5th generation,64GB, blue
+                            </a>
+                            <p>apple</p>
+                        </div>
+                        <div class="recent__content_price">
+                            $1199.00
+                        </div>
+                    </div>
+                    <div class="recent__content_main">
+                        <img src="images/recent-1.jpg" alt="img">
+                        <div class="recent__content_detail">
+                            <a href="#">
+                                LC-70UD1U 70" class aquos 4K ultra HD
+                            </a>
+                            <p>sharp</p>
+                        </div>
+                        <div class="recent__content_price">
+                            $1199.00
+                        </div>
+                    </div>
+                    <div class="recent__content_main">
+                        <img src="images/recent-2.jpg" alt="img">
+                        <div class="recent__content_detail">
+                            <a href="#">
+                                cinemizer OLED 3D virtual reality TV Video
+                            </a>
+                            <p>zeiss</p>
+                        </div>
+                        <div class="recent__content_price">
+                            $1199.00
+                        </div>
+                    </div>
+                    <div class="recent__content_main">
+                        <img src="images/recent-3.jpg" alt="img">
+                        <div class="recent__content_detail">
+                            <a href="#">
+                                s2340T23" full HD multi-Touch Monitor
+                            </a>
+                            <p>dell</p>
+                        </div>
+                        <div class="recent__content_price">
+                            $1199.00
+                        </div>
+                    </div>
+                    <div class="recent__content_main">
+                        <img src="images/recent-4.jpg" alt="img">
+                        <div class="recent__content_detail">
+                            <a href="#">
+                                kardon BDS 7772/120 integrated 3D
+                            </a>
+                            <p>harman</p>
+                        </div>
+                        <div class="recent__content_price">
+                            $1199.00
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- -------------------------brand start here-------------------- -->
+
+    <section id="brand">
+        <div class="container">
+            <div class="brand__heading" data-aos="fade-up" data-aos-delay="50">
+                Top Brands
+            </div>
+            <div class="brand__wrapper" data-aos="fade-up" data-aos-delay="150">
+                <div class="brand__slider">
+                    <div class="brand__main">
+                        <div class="brand__img">
+                            <img src="images/brand-01.jpg" alt="img">
+                        </div>
+                    </div>
+                    <div class="brand__main">
+                        <div class="brand__img">
+                            <img src="images/brand-02.jpg" alt="img">
+                        </div>
+                    </div>
+                    <div class="brand__main">
+                        <div class="brand__img">
+                            <img src="images/brand-03.jpg" alt="img">
+                        </div>
+                    </div>
+                    <div class="brand__main">
+                        <div class="brand__img">
+                            <img src="images/brand-04.jpg" alt="img">
+                        </div>
+                    </div>
+                    <div class="brand__main">
+                        <div class="brand__img">
+                            <img src="images/brand-01.jpg" alt="img">
+                        </div>
+                    </div>
+                    <div class="brand__main">
+                        <div class="brand__img">
+                            <img src="images/brand-02.jpg" alt="img">
+                        </div>
+                    </div>
+                    <div class="brand__main">
+                        <div class="brand__img">
+                            <img src="images/brand-03.jpg" alt="img">
+                        </div>
+                    </div>
+                    <div class="brand__main">
+                        <div class="brand__img">
+                            <img src="images/brand-04.jpg" alt="img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+    
+    <!-- -------------------------brand end here-------------------- -->
 
 
 
